Проба залить изменения

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<h1>Да здравствует свобода и совесть человека!</h1>
 </body>
 </html>
