Доработки по дипломной работе

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="container">
       <div class="header-container">
         <div class="logo-container">
-          <img class="logo" src="svg/noemi-logo.svg" alt="NOEMI">
+          <a href="/" class="logo-link">
+            <img class="logo" src="svg/noemi-logo.svg" alt="NOEMI">
+          </a>
         </div>
         <nav class="nav">
           <label class="menu-burger" for="menu-burger"></label>
@@ -46,7 +48,7 @@
   </header>
 
   <!-- popup -->
-  <div class="popup visually-hidden">
+  <div class="popup none">
     <div class="popup-container">
       <div class="popup-feedback">
         <header class="popup-feedback-header">
