Внесла еще правки по диплому

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#0">Теги</a>
             </li>
-            <li class="nav-item">Темы</li>
+            <li class="nav-item">
+              <a class="nav-link" href="#0">Темы</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#0">Контакты</a>
             </li>
@@ -519,22 +521,22 @@
         <ul class="list-thems">
           <li class="sidebar-thems-list">
             <a href="#0" target="_blank" class="them-sidebar-link">
-              Красота <span class="them-namber-sidebar">12</span></a></li>
+              Красота</a> <span class="them-namber-sidebar">12</span></li>
           <li class="sidebar-thems-list">
             <a href="#0" target="_blank" class="them-sidebar-link">
-              Здоровье <span class="them-namber-sidebar">4</span></a></li>
+              Здоровье</a> <span class="them-namber-sidebar">4</span></li>
           <li class="sidebar-thems-list">
             <a href="#0" target="_blank" class="them-sidebar-link">
-              Образ жизни <span class="them-namber-sidebar">145</span></a></li>
+              Образ жизни</a> <span class="them-namber-sidebar">145</span></li>
           <li class="sidebar-thems-list">
             <a href="#0" target="_blank" class="them-sidebar-link">
-              Музыка <span class="them-namber-sidebar">28</span></a></li>
+              Музыка</a> <span class="them-namber-sidebar">28</span></li>
           <li class="sidebar-thems-list">
             <a href="#0" target="_blank" class="them-sidebar-link">
-              Спорт <span class="them-namber-sidebar">62</span></a></li>
+              Спорт </a> <span class="them-namber-sidebar">62</span></li>
           <li class="sidebar-thems-list">
             <a href="#0" target="_blank" class="them-sidebar-link">
-              Йога <span class="them-namber-sidebar">8</span></a></li>
+              Йога </a> <span class="them-namber-sidebar">8</span></li>
         </ul>
       </section>
 
